Split shell config by function